<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WiFiControll</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_section2">信号源切换</string>
    <string name="title_section3">功能设置</string>
    <string name="title_section1">屏幕设置</string>
    <string name="send">发送</string>
    <string name="Resolution"><![CDATA[屏幕分辨率 >]]></string>
    <string name="resoution_default">Default</string>
    <string name="horizontal_point">水平点数</string>
    <string name="vertical_point">垂直点数</string>
    <string name="setting_options">选项设置</string>
    <string name="setting_default">默认选项</string>
    <string name="horizontal_position">水平位置</string>
    <string name="vertical_position">垂直位置</string>
    <string name="AVD">AVD</string>
    <string name="AV1">AV1</string>
    <string name="VGA">VGA</string>
    <string name="DV1">DV1</string>
    <string name="HDMI">HDMI</string>
    <string name="single_animation">单画面</string>
    <string name="double_animation">双画面</string>
    <string name="triple_animations">三画面</string>
    <string name="quadruple_animations">四画面</string>
    <string name="choose_screen">选择屏幕</string>
    <string name="froze">冻结</string>
    <string name="scale_screen">局部全屏</string>
    <string name="color_setting">色彩设置</string>
    <string name="lighting">亮度</string>
    <string name="contrast">对比度</string>
    <string name="saturation">饱和度</string>
    <string name="title_section4">网络测试</string>
    <string name="testIp">IP:</string>
    <string name="bt_test_ip">Ping</string>
    <string name="test_command">测试指令</string>
    <string name="send_scale">发送大小</string>
    <string name="send_position">发送位置</string>
    <string name="choose_screen_options">选择画面</string>
    <string name="choose_type_device">选择型号</string>
    <string name="choose_screen_options_one">屏幕参数</string>
    <string name="resoution_setting">分辨率设定</string>
    <string name="cntrast_setting">对比度</string>
    <string name="title_activity_not_connect">NotConnectActivity</string>
    <string name="Network_dead">抱歉网络君死掉了呢╮(╯▽╰)╭ </string>
    <string name="try_connect">正在试图连接。。。</string>
    <string name="connect_ok">链接成功</string>
    <string name="choose_ip">选择一个ip或者更改</string>
    <string name="bt_add_one_ip">添加一个IP</string>
    <string name="bt_add_one_ip_tag">添加</string>
    <string name="ip">IP</string>
    <string name="tag">标签</string>
    <string name="NULL_ERROR">不能为空</string>
    <string name="changed_result">更改IP为：</string>

</resources>
