<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_margin="@dimen/activity_vertical_margin"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:textAlignment="center"
            android:text="@string/Resolution"
            android:layout_height="fill_parent" />
        <Button
            android:id="@+id/bt_choose_resolution"
            android:layout_width="0dp"
            android:text="@string/resoution_default"
            android:layout_weight="5"
            android:layout_height="fill_parent" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical"
        android:layout_margin="1dp"
        >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:text="@string/choose_screen_options"
                android:layout_height="fill_parent" />
            <Button
                android:id="@+id/bt_choose_screen_options"
                android:layout_width="0dp"
                android:layout_weight="7"
                android:textAlignment="gravity"
                android:text="@string/setting_default"
                android:layout_height="fill_parent" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:layout_margin="@dimen/activity_vertical_margin"
            >


            <EditText
                android:id="@+id/edit_horizontal_point"
                android:layout_width="0dp"
                android:layout_weight="7"
                android:inputType="numberDecimal"
                android:hint="@string/horizontal_point"
                android:layout_height="fill_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:layout_margin="@dimen/activity_vertical_margin"
            >

            <EditText
                android:id="@+id/edit_vertical_point"
                android:layout_width="0dp"
                android:layout_weight="7"
                android:textAlignment="gravity"
                android:inputType="numberDecimal"
                android:hint="@string/vertical_point"
                android:layout_height="fill_parent" />


            <Button
                android:id="@+id/bt_send_info_point"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_height="match_parent"
                android:hint="@string/send_scale"
                />


        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:layout_margin="@dimen/activity_vertical_margin"
            >

            <EditText
                android:id="@+id/edit_horizontal_position"
                android:layout_width="0dp"
                android:layout_weight="7"
                android:inputType="numberDecimal"
                android:textAlignment="gravity"
                android:hint="@string/horizontal_position"
                android:layout_height="fill_parent" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:layout_margin="@dimen/activity_vertical_margin"
            >

            <EditText
                android:id="@+id/edit_vertical_position"
                android:layout_width="0dp"
                android:layout_weight="7"
                android:inputType="numberDecimal"
                android:textAlignment="gravity"
                android:hint="@string/vertical_position"
                android:layout_height="fill_parent" />
            <Button
                android:id="@+id/bt_send_info"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_height="fill_parent"
                android:hint="@string/send_position"
                />

        </LinearLayout>

    </LinearLayout>



</LinearLayout>