<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ListView
        android:id="@+id/lv_db"
        android:layout_width="fill_parent"
        android:layout_weight="7"
        android:layout_height="0dp"></ListView>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:layout_height="0dp">
        <EditText
            android:id="@+id/et_db_add_tag"
            android:hint="@string/tag"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="fill_parent" />
        <EditText
            android:id="@+id/et_db_add_ip"
            android:layout_width="0dp"
            android:layout_margin="3dp"
            android:layout_weight="5"
            android:hint="@string/ip"
            android:layout_height="fill_parent" />
        <Button
            android:id="@+id/bt_db_add_one"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:text="@string/bt_add_one_ip_tag"
            android:layout_height="fill_parent" />
        </LinearLayout>

</LinearLayout>