<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_test_ip"
        android:layout_width="fill_parent"
        android:layout_weight="2"
        android:minHeight="50dp"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:hint="@string/testIp"
        android:layout_height="0dp" />
    <EditText
        android:id="@+id/et_test_command"
        android:layout_width="fill_parent"
        android:layout_weight="2"
        android:minHeight="50dp"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:hint="@string/test_command"
        android:layout_height="0dp" />
    <TextView
        android:id="@+id/tv_dis_test"
        android:layout_width="fill_parent"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_weight="4"
        android:ems="10"
        android:layout_height="0dp" />
    <Button
        android:id="@+id/bt_test_ip"
        android:layout_width="fill_parent"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_weight="2"
        android:text="@string/bt_test_ip"
        android:textSize="25sp"
        android:layout_height="0dp" />


</LinearLayout>